  support for custom character maps.

- Added support for localizing binding options in GTMUILocalizer.

- Cleaned up several leaks in tests and elsewhere.

- Added PListCompiler.sh for compiling plists.

- Added GTM_NSSTRINGIFY_MACRO for turning other macros into NSStrings.

- Removed GTMTheme because it wasn't generic enough for inclusion in GTM, and
  was never fully implemented

- Added GTM_NONNULL, NS_RETURNS_RETAINED, and CF_RETURNS_RETAINED macrs to 
  support clang analysis.

- Changed GTMStackTrace to put out a cleaner trace, and to work on 64 bit.
  NOTE that if you are parsing this format, that it has changed.
  eg 32 bit
  #0  UnitTest - Foundation               0x0001c392 -[SenTest run]
  and 64 bit
  #0  UnitTest - Foundation               0x10010000001c3921 -[SenTest run]

- Added GTMNSAnimatablePropertyContainer methods that allow you to stop
  animations properly in 10.5.


Release 1.5.1
Changes since 1.5.0
16-June-2008

- Fixed building tiger gcov with a directory path that contains a space.


Release 1.5.0
Changes since 1.0.0
13-June-2008

- Updated the project to Xcode 3.  This is the only supported Xcode version
  for the project.  The code can build against the Tiger or Leopard SDKs, and
  developers can pull individual files into a Xcode 2.x project and things
  should work just fine.

- Fixed up the prefix header of the project and prefix handing in the Unittest
  Xcode Config. (thanks schafdog)

- Fixed error in handling default compression for NSData+zlib

- Changed name on API in NSString+XML and added another api to make this a
  litte more clear. (thanks Kent)

- GTMRegex
  - Found and fixed a bug in the enumerators that was causing them to
    incorrectly walk a string when using '^' in an expression.
  - Added helpers for substring tests and unittests for the new apis.
  - Added initializer that takes an outError to allow the collection of any
    pattern parsing error message (in case the pattern came from a user and